# heic_image_converter

./: .gitignore  CHANGELOG.md  LICENSE  README.md  app.py  cli.py  converter.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
tests/: test_basic.py
