[project]
name = "heic-image-converter"
version = "1.0.0"
description = "Cross-platform GUI + CLI tool to convert Apple HEIC/HEIF images to JPEG/PNG/WebP. Originals are never modified."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "HEIC Converter contributors" }]
keywords = ["heic", "heif", "image", "converter", "jpeg", "webp", "tkinter", "gui"]
classifiers = [
    "Environment :: Win32 (MS Windows)",
    "Environment :: X11 Applications",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
]

dependencies = [
    "Pillow>=10.0.0",
    "pillow-heif>=0.16.0",
    "tkinterdnd2>=0.4.2",
    "ttkbootstrap>=1.10.1",
]

[project.scripts]
heic-converter = "cli:main"

[project.gui-scripts]
heic-converter-gui = "app:main"

[project.urls]
Source = "https://example.invalid/heic-image-converter"

[dependency-groups]
dev = [
    "pyinstaller>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Project is a small flat-layout: ship the three top-level modules.
include = [
    "app.py",
    "cli.py",
    "converter.py",
]

[tool.uv]
package = true
